Index.html modification to call search.php

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="content">
                 <p>Use the search bar below to browse the selection of shoes!</p>
-                <form name="shoeForm" action="">
+                <form action="search.php" name="shoeForm"action="POST">
                     <div class="search">
                         <select name="sexList" form="shoeForm">
                             <option value="unselected">--sex--</option>
