--- a/addShoe.html
+++ b/addShoe.html
@@ -14,7 +14,7 @@
                 <p>Est. 2018, CWRU Shoes is the premier search method for finding shoe deals around Case Western's campus</p>
             </div>
             <div class="nav1">
-                <button onclick="location.href='search.html'" type="browseButton">Browse The Inventory</button>
+                <button onclick="location.href='searchShoe.html'" type="browseButton">Browse The Inventory</button>
             </div>
             <div class="nav2">
                 <button onclick="location.href='index.html'" type="homeButton">Go To Home</button>
@@ -24,7 +24,7 @@
             </div>
             <div class="content">
                 <p>Use the form below to add to the inventory of shoes!</p><br>
-                <form action="search.php" name="shoeForm"action="POST">
+                <form action="searchShoe.php" name="shoeForm"action="POST">
                     <div class="search">
                         <select name="sexList" form="shoeForm">
                             <option value="unselected">--sex--</option>
@@ -63,7 +63,7 @@
                             <option value="parmaPayless">Payless (Parma, OH)</option>
                             <option value="mentorTarget">Target (Mentor, OH)</option>
                             <option value="lakewoodWalmart">Walmart (Lakewood, OH)</option>
-                            <option value="shakerHeightsFinishLine">Finish Line (Shaker Heights, OH</option>
+                            <option value="shakerHeightsFinishLine">Finish Line (Shaker Heights, OH)</option>
                         </select>
                         <br><br><br>
                         <input type="submit" value="Search For Shoes!">
