--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p>Est. 2018, CWRU Shoes is the premier search method for finding shoe deals around Case Western's campus</p>
             </div>
             <div class="nav1">
-                <button onclick="location.href='search.html'" type="browseButton">Browse The Inventory</button>
+                <button onclick="location.href='searchShoe.html'" type="browseButton">Browse The Inventory</button>
             </div>
             <div class="nav2">
                 <button onclick="location.href='index.html'" type="homeButton">Go To Home</button>
