--- a/searchShoe.html
+++ b/searchShoe.html
@@ -5,7 +5,7 @@
         <title>CWRU Shoes</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style/searchStyle.css"/>
+        <link rel="stylesheet" type="text/css" href="style/searchShoeStyle.css"/>
     </head>   
     <body>
         <div class="grid">
@@ -14,7 +14,7 @@
                 <p>Est. 2018, CWRU Shoes is the premier search method for finding shoe deals around Case Western's campus</p>
             </div>
             <div class="nav1">
-                <button onclick="location.href='search.html'" type="browseButton">Browse The Inventory</button>
+                <button onclick="location.href='searchShoe.html'" type="browseButton">Browse The Inventory</button>
             </div>
             <div class="nav2">
                 <button onclick="location.href='index.html'" type="homeButton">Go To Home</button>
@@ -24,7 +24,7 @@
             </div>
             <div class="content">
                 <p>Use the search bar below to browse the selection of shoes!</p><br>
-                <form action="search.php" name="shoeForm"action="POST">
+                <form action="searchShoe.php" name="shoeForm"action="POST">
                     <div class="search">
                         <select name="sexList" form="shoeForm">
                             <option value="unselected">--sex--</option>
