--- a/searchShoeResult.html
+++ b/searchShoeResult.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
- <!-- This HTML file serves as the homepage-->
+ <!-- This HTML file serves as the result page from adding a shoe to the inventory-->
 <html>
     <head>
         <title>CWRU Shoes</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style/indexStyle.css"/>
+        <link rel="stylesheet" type="text/css" href="style/searchShoeResultStyle.css"/>
     </head>   
     <body>
         <div class="grid">
@@ -23,7 +23,7 @@
                 <button onclick="location.href='addShoe.html'" type="addButton">Add To The Inventory</button>
             </div>
             <div class="content">
-                <img src="img/shoe5.jpg" alt="shoe">
+                Result Here
             </div>
             <div class="footer">
                 <p>Copyright by Cwalina, Kao, Krishna, Steiner 2018</p>
