added price field to addShoe.html

--- a/addShoe.html
+++ b/addShoe.html
@@ -58,7 +58,12 @@
                             <option value="Target (Mentor, OH)">Target (Mentor, OH)</option>
                             <option value="Walmart (Lakewood, OH)">Walmart (Lakewood, OH)</option>
                             <option value="Finish Line (Shaker Heights, OH)">Finish Line (Shaker Heights, OH)</option>
-                        </select>                    
+                        </select>
+            <div class = "priceInput">
+                <br>
+                <label>Price:</label>
+                <input type="text" name = "price" id = "price"> 
+            </div>                   
 		<br><br><br>
                 <input type="submit">
         </form>
