--- a/addShoeResult.html
+++ b/addShoeResult.html
@@ -23,8 +23,8 @@
                 <button onclick="location.href='addShoe.html'" type="addButton">Add To The Inventory</button>
             </div>
             <div class="content">
-                Result Here
-            </div>
+		<p> Just added the Following Specs! </p>
+		</br><iframe src="addedVal.html" height="50" frameborder="0"></iframe>
             <div class="footer">
                 <p>Copyright by Cwalina, Kao, Krishna, Steiner 2018</p>
             </div>
