Removed extra files, fixed merge problems, added price option

--- a/addShoe.html
+++ b/addShoe.html
@@ -58,16 +58,13 @@
                             <option value="Target (Mentor, OH)">Target (Mentor, OH)</option>
                             <option value="Walmart (Lakewood, OH)">Walmart (Lakewood, OH)</option>
                             <option value="Finish Line (Shaker Heights, OH)">Finish Line (Shaker Heights, OH)</option>
-<<<<<<< HEAD
                         </select>                    
-=======
                         </select>
             <div class = "priceInput">
                 <br>
                 <label>Price:</label>
-                <input type="text" name = "price" id = "price"> 
+                <input type="text" name = "price" id = "price" value="price"> 
             </div>                   
->>>>>>> 0f5149114dee40284d541d03922e422df1e3339d
 		<br><br><br>
                 <input type="submit">
         </form>
