--- a/addShoeResult.html
+++ b/addShoeResult.html
@@ -24,7 +24,7 @@
             </div>
             <div class="content">
 		<p> Just added the Following Specs! </p>
-		</br><iframe src="addedVal.html" height="50" frameborder="0"></iframe>
+		</br><iframe src="addedVal.html" height="50" width="500" frameborder="0"></iframe>
             <div class="footer">
                 <p>Copyright by Cwalina, Kao, Krishna, Steiner 2018</p>
             </div>
