--- a/addedVal.html
+++ b/addedVal.html
@@ -1,10 +1,6 @@
 female
-<<<<<<< HEAD
-Reebok
-white
-=======
 Adidas
-black
->>>>>>> 0f5149114dee40284d541d03922e422df1e3339d
-6
-female
+yellow
+9
+Finish Line (Shaker Heights, OH)
+344
