added Search Values

--- a/searchShoe.html
+++ b/searchShoe.html
@@ -26,10 +26,12 @@
                 <p>Use the search bar below to browse the selection of shoes!</p><br>
         <form action="searchShoe.php" id="shoeForm" method="post">
                         <select name="sexList" id="sexList">
+			    <option value="blank">--Gender--</option>
                             <option value="male">Male</option>
                             <option value="female">Female</option>
                         </select>
                         <select name="brandList" id="brandList">
+			    <option value="blank">--Brand--</option>
                             <option value="Nike">Nike</option>
                             <option value="Adidas">Adidas</option>
                             <option value="Reebok">Reebok</option>
@@ -37,6 +39,7 @@
                             <option value="vans">Vans</option>
                         </select>
                         <select name="colorList" id="colorList">
+			    <option value="blank">--Color--</option>
                             <option value="black">Black</option>
                             <option value="white">White</option>
                             <option value="blue">Blue</option>
@@ -45,6 +48,7 @@
                             <option value="green">Green</option>
                         </select>
                         <select name="sizeList" id="sizeList">
+			    <option value="blank">--Size--</option>
                             <option value="6">6</option>
                             <option value="7">7</option>
                             <option value="8">8</option>
@@ -54,6 +58,7 @@
                             <option value="12">12</option>
                         </select>
                         <select name="storeList" id="storeList">
+			    <option value="blank">--Store--</option>
                             <option value="Payless (Parma, OH)">Payless (Parma, OH)</option>
                             <option value="Target (Mentor, OH)">Target (Mentor, OH)</option>
                             <option value="Walmart (Lakewood, OH)">Walmart (Lakewood, OH)</option>
