Update Price, minor cosmetic changes

--- a/addShoeResult.html
+++ b/addShoeResult.html
@@ -23,8 +23,7 @@
                 <button onclick="location.href='addShoe.html'" type="addButton">Add To The Inventory</button>
             </div>
             <div class="content">
-		<p> Just added the Following Specs! </p>
-		</br><iframe src="addedVal.html" height="50" width="500" frameborder="0"></iframe>
+		<h1> Shoe Added Successfully!! </h1>
             <div class="footer">
                 <p>Copyright by Cwalina, Kao, Krishna, Steiner 2018</p>
             </div>
